Added Car Shades and Car Mirror featurettes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -123,7 +123,7 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat carrier/stroller</a></div></li>
               <li><div><input type="checkbox" id="diaper-backpack-checkbox"><span> </span><a href="#diaper-backpack">Diaper backpack</a></div></li>
               <li><div><input type="checkbox" id="blanket-checkbox"><span> </span><a href="#blanket">Blanket</a></div></li>
-              <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
+              <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
             </ul>
 
             <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
@@ -280,7 +280,7 @@ extra_css: "carousel.css"
 
             <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="diaper-backpack"></span>Diaper Backpack</h2>
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="diaper-backpack"></span>Diaper backpack</h2>
           <p class="lead">Now one might argue that any backpack or roomy bag will work just fine for purposes of carrying diapers and bottles, but hey, I didn’t have a spare one. A diaper backpack will also come with a changing pad and insulated bottle pockets – nice! Not to mention tons of pockets to keep you organized. And there are all kinds of designs for you to choose from. My husband and I decided on a neutral gray one so we both feel good about wearing it.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">HapTim Multi-Function Large Baby Diaper Bag:</span> $<span id="diaper-backpack-price">46.99</span>, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B01MCWVQN1', '_blank'); return false;">Check it up!</button>
@@ -303,6 +303,36 @@ extra_css: "carousel.css"
         </div>
         <div class="col-md-5 order-md-1">
           <img src="../static/img/HudsonBlanket.jpg" class="img-fluid" alt="Hudson Baby Super Plush Blanket">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="car-shades"></span>Car window shades</h2>
+          <p class="lead">For car shades, if you’re planning on going places with your newborn and your area gets lots of sun (lucky!), then they are pretty much a necessity. My baby was born in Seattle in the midst of raining season, so I was able to postpone the purchase until later. I still had to get them though! And they don’t have to be a special baby product. It’s more important that they fit well in your car (and cover as much window as possible) than what giraffe picture they have on them.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Enovoe Car Window Shade:</span> $12.97, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Enovoe-Car-Window-Shade-Protection/dp/B00KL3ALGO/', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-md-5">
+          <img src="../static/img/CarShadesCrop.jpg" class="img-fluid" alt="Car Window Shades">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="car-mirror"></span>Baby car mirror: <span class="text-muted">connect & have fun!</span></h2>
+          <p class="lead">A car mirror is more of an optional purchase. It attaches to the back seat so that you can see the baby while driving. To me it was very well worth it, but it’s still not the same as being next to her. My baby girl slept very well in the car and I remember myself wondering if she’s sleeping or… ?  Ah, let’s pull to the side and check!.. There are also car mirrors that lit up and play music for your little one’s entertainment. My baby really liked ours when she was ~3-5 months, but it won’t be much fun for an older baby.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror</span> $36.99, buybuybaby.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.buybuybaby.com/store/product/brica-reg-baby-in-sight-reg-magical-firefly-trade-car-back-seat-mirror-in-green/5215254', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="../static/img/CarMirror.jpeg" class="img-fluid" alt="Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror">
 
         </div>
       </div>
