--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -138,7 +138,7 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Onesies - size Newborn - x5</div></li>
+              <li><div><input type="checkbox" id="onesies-checkbox"><span> </span><a href="#clothes">Onesies - size Newborn - x5</a></div></li>
               <li><div><input type="checkbox"> Jumpsuits - size Newborn - x3</div></li>
               <li><div><input type="checkbox"> Onesies - size 1 month - x5</div></li>
               <li><div><input type="checkbox"> Jumpsuits - size 1 month - x3</div></li>
@@ -336,6 +336,46 @@ extra_css: "carousel.css"
 
         </div>
       </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="clothes"></span>Small clothes: <span class="text-muted">3 big questions</span></h2>
+          <p class="lead">With baby clothes, there are three questions that every parent-to-be is struggling with.</p>
+          <ul>
+            <li>First, what size?</li>
+            <li>Second, what items?</li>
+            <li>And third, how many?</li>
+          </ul>
+          <p class="lead">Let’s start with sizes. With an infant you have a choice of three sizes – Preemie, Newborn and 0-3 months. Preemie is tiny, so unless you know for a fact that you’re having a very small baby, no need to consider it. Usually the first size in clothes for most babies is Newborn. Baby sizes are based on both weight and height. Per Carter’s size table, Newborn fits babies with 6-9 lbs. weight and 17- 21.5" height, and that’s not a particularly big baby either. My baby was born 7 lbs. and 20 inches, and wore Newborn for 3 weeks before we moved to a size up. Your baby might be born bigger or grow up faster and outgrow his Newborn clothes even sooner than mine did. And I know parents who didn’t purchase any Newborn clothes at all. Knowing all that, I would recommend getting some clothes in both sizes – Newborn and 0-3 months.</p>
+          <p class="lead">To the second question – what items to get? With baby’s body so fragile and her head so soft you won’t be looking forward to changing her outfits. It’s all about comfort and convenience here. Soft natural materials, no tight necks, as few buttons as possible. You’ll see that quite a few things fit this description, including kimonos and gowns, etc. My choice fell on a set of onesies and a set of footed sleep and play’s. Different brands name their items differently, so to explain myself – onesie is a t-shirt which clips under the diaper and sleep and play is a full body suit. Onesie serves as a first layer and can be the only layer during summer time, while sleep and play will go on top of it on a cooler day. Onesies can have short or long sleeves and different head opening designs. Choose onesies with wider head openings, you’ll be grateful for those. Sleep and play’s come in cotton and fleece, as well as different styles. I prefer zippers over buttons/clips and footies over non-footed ones. Buttons look cute, but doing them in a right order is a pain. And with non-footed ones you might want socks, and socks easily get lost, so footies rock!</p>
+          <p class="lead">Apart from onesies and sleep and plays, for the first six months of my baby’s life I barely used anything else, expect maybe for photo times. Obviously your decision will depend on temperatures in your area. For winter times you might want a jacket (with mittens attached, convenient!), a hat and soft fleece booties. For hot sunny days out there are hats with brims.</p>
+          <p class="lead">Okay, let’s say I persuaded you to buy onesies and sleep & play suits, but how many? The amount of clothes you need will depend on how messy things will turn out (which you don’t know in advance!) and how often you prefer to do laundry. Onesies and sleep and play suits are often conveniently sold in sets. Get a set of five items each and you are covered for the beginning. If your baby will have a lot of blowouts or reflux, buying extra clothes is not a problem – ask someone to stop by the nearest Walmart or Fred Meyer, they sell baby stuff everywhere now. Otherwise, you might find yourself covered with just those few things. If you decided to follow my advice on getting both Newborn and 0-3 sizes, you’ll need four sets total.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Carters Baby Girl 5-Pack Bodysuits:</span> $16.80, carters.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.carters.com/carters-baby-girl-bodysuits', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-md-5">
+          <img src="../static/img/CartersOnesiesGirl.jpg" class="img-fluid" alt="Carters Baby Girl 5-Pack Bodysuits">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="car-mirror"></span>Baby car mirror: <span class="text-muted">connect & have fun!</span></h2>
+          <p class="lead">A car mirror is more of an optional purchase. It attaches to the back seat so that you can see the baby while driving. To me it was very well worth it, but it’s still not the same as being next to her. My baby girl slept very well in the car and I remember myself wondering if she’s sleeping or… ?  Ah, let’s pull to the side and check!.. There are also car mirrors that lit up and play music for your little one’s entertainment. My baby really liked ours when she was ~3-5 months, but it won’t be much fun for an older baby.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror</span> $36.99, buybuybaby.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.buybuybaby.com/store/product/brica-reg-baby-in-sight-reg-magical-firefly-trade-car-back-seat-mirror-in-green/5215254', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="../static/img/CarMirror.jpeg" class="img-fluid" alt="Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror">
+
+        </div>
+      </div>
+
 
       <hr class="featurette-divider">
 
