--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@ extra_css: "carousel.css"
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/carousel.css">
     <link rel="stylesheet" href="../static/css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -115,12 +116,12 @@ extra_css: "carousel.css"
       <div class="card-deck mb-2 babylist">
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal card-heading" style="color:#ffffff">Travel time</h4>
+            <h4 class="my-0 font-weight-light" style="color:#ffffff">Travel time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat</a></div></li>
-              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat carrier/stroller</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car Seat</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car Seat Carrier/Stroller</a></div></li>
               <li><div><input type="checkbox" id="diaper-backpack-checkbox"><span> </span><a href="#diaper-backpack">Diaper backpack</a></div></li>
               <li><div><input type="checkbox" id="blanket-checkbox"><span> </span><a href="#blanket">Blanket</a></div></li>
               <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
@@ -134,7 +135,7 @@ extra_css: "carousel.css"
 
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby fashion</h4>
+            <h4 class="my-0 font-weight-light" style="color:#ffffff">Baby fashion</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -151,7 +152,7 @@ extra_css: "carousel.css"
 
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Bath time</h4>
+            <h4 class="my-0 font-weight-light" style="color:#ffffff">Bath time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -173,7 +174,7 @@ extra_css: "carousel.css"
       <div class="card-deck mb-3">
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Nap time</h4>
+            <h4 class="my-0 font-weight-light" style="color:#ffffff">Nap time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -194,7 +195,7 @@ extra_css: "carousel.css"
 
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Lunch time</h4>
+            <h4 class="my-0 font-weight-light" style="color:#ffffff">Lunch time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -215,7 +216,7 @@ extra_css: "carousel.css"
 
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Refresh time</h4>
+            <h4 class="my-0 font-weight-light" style="color:#ffffff">Refresh time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
