--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,12 +1,4 @@
-/*
-.blue-gradient {
-  background-image:
-    linear-gradient(
-      rgba(0, 15, 200, 0.5),
-      rgba(0, 15, 200, 0.5)
-    );
- }
-*/
+
 
 .baby-icon {
   max-width: 80%;
@@ -17,17 +9,13 @@
 
 
 
-/*not needed, need to change to responsive image
-.baby-item {
-  max-width: 100%;
-  display: block;
-  height: auto;
-}
-*/
-
 .card-heading {
-
+    font-size: 25px;
 }
+
+
+
+
 
 .featurette-divider {
   margin: 3.5rem 0; /* Space out the Bootstrap <hr> more */
@@ -45,6 +33,8 @@
   font-size: 1.10rem;
   font-weight: 300;
 }
+
+
 
 .btn-outline-pink {
   color: #ffa5ce;
@@ -79,8 +69,14 @@
 }
 
 
-
-
+/*
+.card-font {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 200;
+  color: #5f94bf;
+  font-size: 14px;
+}
+*/
 
 .card-centering {
   width: 70%;
@@ -99,13 +95,14 @@
 }
 
 .card-pink {
-  border: 1px solid #ffa5ce;
-  background-color: #fff6fa;
+  border: 1px solid grey;
+  background-image: linear-gradient(#fef6f5, 80%, #fbe1df);
 }
 
 .card-blue {
-  border: 1px solid #89cff0;
-  background-color: #e7f5fc;
+  border: 1px solid grey;
+  background-image: linear-gradient(white, 80%, #e7f5fc);
+  /*background-color: #e7f5fc;*/
 }
 
 
@@ -123,6 +120,7 @@
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
+  padding-top: 0.25rem;
 }
 
 .card-header {
@@ -131,8 +129,8 @@
 }
 
 .card-header-pink {
-  background-color: #ffa5ce;
-  border-bottom: 1px solid #ffa5ce;
+  background-color: #f9acbc;
+  border-bottom: 1px solid #fef6f5;
 }
 
 .card-header-blue {
