--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,10 @@
-<!---
-layout: examples
-title: Carousel Template
-extra_css: "carousel.css"
---->
-
 <!DOCTYPE html>
 <html>
 <head>
     <title>Baby Checklist</title>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/carousel.css">
     <link rel="stylesheet" href="../static/css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -26,16 +18,18 @@ extra_css: "carousel.css"
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Top of the Page <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#list-top">Top of the List<span class="sr-only">(current)</span></a>
           </li>
+          <!-- Hiding additional elements
           <li class="nav-item">
             <a class="nav-link" href="#">Download PDF</a>
           </li>
+          -->
           <!--
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
-        -->
+          -->
         </ul>
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -108,7 +102,7 @@ extra_css: "carousel.css"
     -->
 
     <div class="pricing-header px-3 py-3 pt-md-1 pb-md-3 mx-auto text-center">
-      <h1 id="wow" class="featurette-heading"><span id="itemMessage">Items To Get: </span><span id="itemNumber">0</span> / 42 ($<span id="item-price">0</span> / $0 value)</h1>
+      <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Items To Get: </span><span id="itemNumber">0</span> / 42 ($<span id="item-price">0</span> / $0 value)</h1>
       <!--<p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>-->
     </div>
 
