--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Getting ready for a baby?</h1>
-              <p>Use our checkilist to make sure you haven't forgotten anything vital.</p>
+              <p>Don't forget anything vital. Use our checklist.</p>
               <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
             </div>
           </div>
@@ -65,7 +65,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Do I need it all?</h1>
-              <p>Others may suggest a ridiculous amount. Here we have a list of good-to-have minimum.</p>
+              <p>A list of good-to-have minimum. No clutter.</p>
               <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>-->
             </div>
           </div>
@@ -92,18 +92,10 @@
       </a>
     </div>
 
-    <!--Adding a part of Pricing code to build a chacklist-->
-
-    <!--Hiding the top of the Pricing div
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Pricing</h1>
-      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
-    </div>
-    -->
 
     <div class="pricing-header px-3 py-3 pt-md-1 pb-md-3 mx-auto text-center">
-      <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Items To Get: </span><span id="itemNumber">0</span> / 42 ($<span id="item-price">0</span> / $0 value)</h1>
-      <!--<p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>-->
+      <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Items To Get: </span><span id="itemNumber">0</span> / 42 <span class="lead">($<span id="item-price">0</span> / $1500 value)</span></h1>
+      <p class="lead">Click on links to jump to item descriptions. Сheck items you already own. Total value doesn't include optional items.</p>
     </div>
 
     <div class="container">
