Added margin between featurettes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -235,8 +235,8 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-7">
+      <div class="row featurette mb-4">
+        <div class="col-md-7 mb-4">
           <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="travel-system"></span>Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
           <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install in the back seat of your car, a car seat itself and a carrier which the car seat clicks in to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
           <p class="lead on-one-line"><span class="font-weight-bold">Chicco Bravo Trio Travel System:</span> $<span class="price">379.99</span>, Amazon.com</p>
@@ -248,10 +248,8 @@
         </div>
       </div>
 
-      <hr class="featurette-divider">
-
       <div class="row featurette">
-        <div class="col-md-7 order-md-2">
+        <div class="col-md-7 order-md-2 mb-4">
           <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
           <p class="lead">One downside of Chicco Bravo Travel System is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly flat. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest waterfront park. Well, she was lucky to live near one, and then again that’s how her baby prefferd to sleep. Her family chose to invest into a more functional, more solid and definitely fancier option. The model offers a car seat, a bassinet and a carrier which will work with both of them.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">UPPAbaby Vista Stroller & MESA Car Seat Bundle:</span> $1,199.98, Amazon.com</p>
@@ -265,8 +263,8 @@
 
       <hr class="featurette-divider">
 
-            <div class="row featurette">
-        <div class="col-md-7">
+      <div class="row featurette">
+        <div class="col-md-7 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="diaper-backpack"></span>Diaper backpack</h2>
           <p class="lead">Now one might argue that any backpack or roomy bag will work just fine for purposes of carrying diapers and bottles, but hey, I didn’t have a spare one. A diaper backpack will also come with a changing pad and insulated bottle pockets – nice! Not to mention tons of pockets to keep you organized. And there are all kinds of designs for you to choose from. My husband and I decided on a neutral gray one so we both feel good about wearing it.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">HapTim Multi-Function Large Baby Diaper Bag:</span> $<span id="diaper-backpack-price">46.99</span>, Amazon.com</p>
@@ -281,7 +279,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7 order-md-2">
+        <div class="col-md-7 order-md-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="blanket"></span>Blanket: <span class="text-muted">keep her warm!</span></h2>
           <p class="lead">Regardless of what time of the year we’re talking about, it’s a good idea to have a medium warmth blanket handy, even during summer. Because, you know, air conditioners. A blanket is an easy way to add an extra layer to your baby’s outfit, and it’s actually the only safe way to keep your baby warm in a car in colder months. Safety guidelines forbid parents from bundling up little ones in winter coats and parkas when putting them in a car seat, because the straps won’t tighten well enough. You dress the baby into a fleece suit, strap her into the seat and then tuck a blanket on top of it. My family ended up getting a blanket for every car, stroller and place where baby has to spend time at. We had at least five, if not more!</p>
           <p class="lead">The very important piece here – you can’t leave a baby with a blanket unsupervised because of a suffocation risk. That means that you’re either constantly keeping an eye on him or swaddle/tuck the blanket into the car seat nice and snug.</p>
@@ -297,7 +295,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-md-7 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="car-shades"></span>Car window shades</h2>
           <p class="lead">For car shades, if you’re planning on going places with your newborn and your area gets lots of sun (lucky!), then they are pretty much a necessity. My baby was born in Seattle in the midst of raining season, so I was able to postpone the purchase until later. I still had to get them though! And they don’t have to be a special baby product. It’s more important that they fit well in your car (and cover as much window as possible) than what giraffe picture they have on them.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">Enovoe Car Window Shade:</span> $12.97, Amazon.com</p>
@@ -312,7 +310,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7 order-md-2">
+        <div class="col-md-7 order-md-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="car-mirror"></span>Baby car mirror: <span class="text-muted">connect & have fun!</span></h2>
           <p class="lead">A car mirror is more of an optional purchase. It attaches to the back seat so that you can see the baby while driving. To me it was very well worth it, but it’s still not the same as being next to her. My baby girl slept very well in the car and I remember myself wondering if she’s sleeping or… ?  Ah, let’s pull to the side and check!.. There are also car mirrors that lit up and play music for your little one’s entertainment. My baby really liked ours when she was ~3-5 months, but it won’t be much fun for an older baby.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror</span> $36.99, buybuybaby.com</p>
@@ -327,7 +325,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette mb-4">
-        <div class="col-md-7">
+        <div class="col-md-7 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="clothes"></span>Small clothes: <span class="text-muted">3 big questions</span></h2>
           <p class="lead">With baby clothes, there are three questions that every parent-to-be is struggling with.</p>
           <ul>
@@ -368,13 +366,13 @@
         </div>
       </div>
 
-      <div class="row featurette mb-4">
+      <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <p class="lead">To the second question – what items to get? With baby’s body so fragile and her head so soft you won’t be looking forward to changing her outfits. It’s all about comfort and convenience here. Soft natural materials, no tight necks, as few buttons as possible. You’ll see that quite a few things fit this description, including kimonos and gowns, etc. My choice fell on a set of onesies and a set of footed sleep and play’s. Different brands name their items differently, so to explain myself – onesie is a t-shirt which clips under the diaper and sleep and play is a full body suit. Onesie serves as a first layer and can be the only layer during summer time, while sleep and play will go on top of it on a cooler day. Onesies can have short or long sleeves and different head opening designs. Choose onesies with wider head openings, you’ll be grateful for those. Sleep and play’s come in cotton and fleece, as well as different styles. I prefer zippers over buttons/clips and footies over non-footed ones. Buttons look cute, but doing them in a right order is a pain. And with non-footed ones you might want socks, and socks easily get lost, so footies rock!</p>
           <p class="lead">Apart from onesies and sleep and plays, for the first six months of my baby’s life I barely used anything else, expect maybe for photo times. Obviously your decision will depend on temperatures in your area. For winter times you might want a jacket (with mittens attached, convenient!), a hat and soft fleece booties. For hot sunny days out there are hats with brims.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="../static/img/CartersSleepAndPlayBoy.jpg" class="img-fluid" alt="Carter's Striped Cat Zip-Up Stretch Sleep & Play">
+          <img src="../static/img/CartersSleepAndPlayBoy.jpg" class="img-fluid mb-4" alt="Carter's Striped Cat Zip-Up Stretch Sleep & Play">
         </div>
       </div>
 
@@ -382,7 +380,7 @@
       <div>
         <p class="lead">Okay, let’s say I persuaded you to buy onesies and sleep & play suits, but how many? The amount of clothes you need will depend on how messy things will turn out (which you don’t know in advance!) and how often you prefer to do laundry. Onesies and sleep and play suits are often conveniently sold in sets. Get a set of five items each and you are covered for the beginning. If your baby will have a lot of blowouts or reflux, buying extra clothes is not a problem – ask someone to stop by the nearest Walmart or Fred Meyer, they sell baby stuff everywhere now. Otherwise, you might find yourself covered with just those few things. If you decided to follow my advice on getting both Newborn and 0-3 sizes, you’ll need four sets total.</p>
         <p class="lead on-one-line"><span class="font-weight-bold">Carter's Baby Girl 5-Pack Bodysuits:</span> $16.80, carters.com<span>  </span></p>
-        <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.carters.com/carters-baby-girl-bodysuits', '_blank'); return false;">Check it up!</button>
+        <button type="button" class="btn btn-outline-pink btn-sm mb-2" onclick=" window.open('https://www.carters.com/carters-baby-girl-bodysuits', '_blank'); return false;">Check it up!</button>
         <br>
         <p class="lead on-one-line"><span class="font-weight-bold">Carter's Baby Boy Sleep & Plays:</span> $9.00 each, carters.com</p>
         <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.carters.com/carters-baby-boy-clearance?page=1#prefn1=filter_broad&prefv1=Sleep%20%26%20Plays', '_blank'); return false;">Check it up!</button>
@@ -391,23 +389,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="car-mirror"></span>Baby car mirror: <span class="text-muted">connect & have fun!</span></h2>
-          <p class="lead">A car mirror is more of an optional purchase. It attaches to the back seat so that you can see the baby while driving. To me it was very well worth it, but it’s still not the same as being next to her. My baby girl slept very well in the car and I remember myself wondering if she’s sleeping or… ?  Ah, let’s pull to the side and check!.. There are also car mirrors that lit up and play music for your little one’s entertainment. My baby really liked ours when she was ~3-5 months, but it won’t be much fun for an older baby.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror</span> $36.99, buybuybaby.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.buybuybaby.com/store/product/brica-reg-baby-in-sight-reg-magical-firefly-trade-car-back-seat-mirror-in-green/5215254', '_blank'); return false;">Check it up!</button>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <img src="../static/img/CarMirror.jpeg" class="img-fluid" alt="Brica® Baby In-Sight® Magical Firefly™ Car Back Seat Mirror">
-
-        </div>
-      </div>
-
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-md-7 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="crib"></span>Crib</h2>
           <p class="lead">Crib is not only a place where your baby sleeps. It is also a safe place where you can leave the baby unattended knowing that she won’t roll over and fall (the danger becomes real at ~4 months of age). Therefore, definitely, get a crib! I am linking the one we ended up buying – and we are very happy with it! – but, honestly, I think the decision should come up to your furniture preferences. Cribs come in two sizes – standard and mini. You need a standard one which will fit a mattress of 28 x 52. Most cribs will feature adjustable mattress heights. Putting a baby down into a crib without waking her up is quite a task, so assemble the crib with your mattress on the highest setting – you’ll be grateful for that!</p>
           <p class="lead"> Now, what you also need to know is that when your baby will start sleeping in the crib is a big question, and will depend on your thoughts around co-sleeping. Co-sleeping is considered unsafe and oh so not recommended by American Academy of Pediatrics, but many Moms end up going co-sleeping route anyways. Sleep training an infant is hard. Having to get up for a feeding 3-4 times/night is hard.</p>
@@ -423,7 +405,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7 order-md-2">
+        <div class="col-md-7 order-md-2 mb-4">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="bassinet"></span>Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
           <p class="lead">Now many parents are not excited about the crib in the beginning, because it seems too big, too cold and too far away from their bed. There are all kinds of bassinets on the market, including so called bedside bassinets – those which are meant to be positioned right next to your bed for easy checking on the baby. The downside of any bassinet is that the baby will inevitably outgrow it in a next few months and will have to go back into the crib, so for me it felt like an unnecessary expense. I didn’t have a bassinet. My friend – on the contrary – did and she loved it! Their bassinet was designed for bed sharing – they placed it right on their bed between Mom and Dad. She said the baby was much happier sleeping next to them and with the C-section it was a huge relief to be able to take care of him without having to get up.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $45.38, Amazon.com</p>
